--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "lib/spdlog"]
 	path = lib/spdlog
-	url = git@github.com:gabime/spdlog.git
+	url = https://github.com/gabime/spdlog.git
 [submodule "lib/rapidjson"]
 	path = lib/rapidjson
-	url = git@github.com:Tencent/rapidjson.git
+	url = https://github.com/Tencent/rapidjson.git
 [submodule "lib/cpp-httplib"]
 	path = lib/cpp-httplib
-	url = git@github.com:yhirose/cpp-httplib.git
+	url = https://github.com/yhirose/cpp-httplib.git
+[submodule "lib/tremor"]
+	path = lib/tremor
+	url = https://gitlab.xiph.org/xiph/tremor.git
